--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "browserify": "^16.5.0",
     "ejs": "^3.0.1",
     "express": "^4.17.1",
+    "express-validator": "^6.4.0",
     "mysql": "^2.18.1",
     "path": "^0.12.7",
     "util": "^0.12.2",
